RESOLVED FIXED205385
Missing headers in worker files cause random build failures when adding new files
https://bugs.webkit.org/show_bug.cgi?id=205385
Summary Missing headers in worker files cause random build failures when adding new f...
Chris Lord
Reported 2019-12-18 03:17:03 PST
I've had a couple of patches hit by this - there are at least two missing headers that while cause no problems now, can cause problems when you add new files (and, I assume, change the grouping of unified sources). I'm going to deal with that separately here rather than with unrelated changes.
Attachments
Patch (1.90 KB, patch)
2019-12-18 03:19 PST, Chris Lord
no flags
Chris Lord
Comment 1 2019-12-18 03:19:56 PST
WebKit Commit Bot
Comment 2 2019-12-18 04:07:07 PST
Comment on attachment 385952 [details] Patch Clearing flags on attachment: 385952 Committed r253677: <https://trac.webkit.org/changeset/253677>
WebKit Commit Bot
Comment 3 2019-12-18 04:07:09 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-12-18 04:08:21 PST
Note You need to log in before you can comment on or make changes to this bug.