Missing headers in worker files cause random build failures when adding new files https://bugs.webkit.org/show_bug.cgi?id=205385

Patch by Chris Lord <clord@igalia.com> on 2019-12-18
Reviewed by Youenn Fablet.

No new tests, no behavioral changes.

* workers/service/context/ServiceWorkerThreadProxy.cpp:
* workers/service/server/SWServerRegistration.cpp:

Canonical link: https://commits.webkit.org/218581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253677 268f45cc-cd09-0410-ab3c-d52691b4dbfc